Allowing the pre tag to overflow to fix formatting on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -267,6 +267,7 @@ a:visited { color: #aa0000; } */
   -moz-border-radius: 3px;
   border-radius: 3px;
   font-size: 15px;
+  overflow: auto;
 }
 
 .post code { padding: 1px 5px; }
